--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Arturo's Learning Site</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
+    <header class="site-header">
       <h1>Arturo Tapia Cerrudo</h1>
       <p>This is my website, and here I will post what I learn every week.</p>
     </header>
-    <table border="10">
+
+    <table class="info-table" border="10">
       <tr>
         <th>Name</th>
         <th>Age</th>
@@ -25,52 +26,40 @@
         <td>15</td>
       </tr>
     </table>
+
     <h2>My Lessons</h2>
-    <section id="lessons">
-      <div class="lesson-card">
-        <img
-          src="https://as1.ftcdn.net/v2/jpg/02/42/23/58/1000_F_242235892_cs2bd1fNCf144PsEuqjudIycGTuFloEE.jpg"
-          alt="Image of coding"
-        />
-        <h3>Intrdouction to HTML</h3>
-        <p>
-          Here we learnt about basics of HTML5 and tried to make our own
-          website.
-        </p>
+    <section id="lesson-section">
+      <div class="lesson-box">
+        <img src="https://images.unsplash.com/photo-1581091870622-1e7b9c5c9f9e?auto=format&fit=crop&w=600&q=60" alt="HTML basics" />
+        <a href="lesson-html.html"><h3>Intro to HTML</h3></a>
+        <p>Learn how to structure web pages using HTML tags and semantic elements.</p>
       </div>
-      <div class="lesson-card">
-        <img
-          src="https://as1.ftcdn.net/v2/jpg/02/42/23/58/1000_F_242235892_cs2bd1fNCf144PsEuqjudIycGTuFloEE.jpg"
-          alt="Image of coding"
-        />
-        <h3>Intrdouction to HTML</h3>
-        <p>
-          Here we learnt about basics of HTML5 and tried to make our own
-          website.
-        </p>
+
+      <div class="lesson-box">
+        <img src="https://images.unsplash.com/photo-1581090700227-1e7b9c5c9f9e?auto=format&fit=crop&w=600&q=60" alt="CSS styling" />
+        <a href="lesson-css.html"><h3>Styling with CSS</h3></a>
+        <p>Discover how to style your site with colors, layouts, and animations using CSS.</p>
       </div>
-      <div class="lesson-card">
-        <img
-          src="https://as1.ftcdn.net/v2/jpg/02/42/23/58/1000_F_242235892_cs2bd1fNCf144PsEuqjudIycGTuFloEE.jpg"
-          alt="Image of coding"
-        />
-        <h3>Intrdouction to HTML</h3>
-        <p>
-          Here we learnt about basics of HTML5 and tried to make our own
-          website.
-        </p>
+
+      <div class="lesson-box">
+        <img src="https://images.unsplash.com/photo-1581092334509-1e7b9c5c9f9e?auto=format&fit=crop&w=600&q=60" alt="JavaScript basics" />
+        <a href="lesson-js.html"><h3>JavaScript Basics</h3></a>
+        <p>Make your website interactive with JavaScript — from buttons to dynamic content.</p>
       </div>
-      <div class="lesson-card">
-        <img
-          src="https://as1.ftcdn.net/v2/jpg/02/42/23/58/1000_F_242235892_cs2bd1fNCf144PsEuqjudIycGTuFloEE.jpg"
-          alt="Image of coding"
-        />
-        <h3>Intrdouction to HTML</h3>
-        <p>
-          Here we learnt about basics of HTML5 and tried to make our own
-          website.
-        </p>
+
+      <div class="lesson-box">
+        <img src="https://images.unsplash.com/photo-1581091012184-1e7b9c5c9f9e?auto=format&fit=crop&w=600&q=60" alt="Responsive design" />
+        <a href="lesson-responsive.html"><h3>Responsive Design</h3></a>
+        <p>Learn how to make your site look great on phones, tablets, and desktops.</p>
+      </div>
+
+      <div class="lesson-box">
+        <img src="https://images.unsplash.com/photo-1581092334509-1e7b9c5c9f9e?auto=format&fit=crop&w=600&q=60" alt="Web accessibility" />
+        <a href="lesson-accessibility.html"><h3>Web Accessibility</h3></a>
+        <p>Design inclusive websites that everyone can use, including people with disabilities.</p>
       </div>
     </section>
   </body>
 </html>
+
+
